<resources>
    <string name="app_name">bdt</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="registro">Registro</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="vuelve_a_escribir_la_contrase_a">Vuelve a escribir la contraseña</string>
    <string name="foto_de_perfil">Foto de perfil</string>
    <string name="crear_cuenta1">Crear cuenta</string>
    <string name="pedido_confirmado">Pedido Confirmado !!!</string>
    <string name="todo">TODO</string>
    <string name="revisa_en">Revisa en</string>
    <string name="mis_compras">Mis compras</string>
    <string name="para_consultar_detalles">para consultar detalles</string>
    <string name="ir_a_mis_compras_y_ventas">Ir a mis Compras y Ventas</string>
    <string name="mis_compras_y_ventas">Mis compras y ventas</string>
    <string name="compras">Compras</string>
    <string name="ventas">Ventas</string>
    <string name="arreglo_tu_jardiner_a">Arreglo tu jardinería</string>
    <string name="ofrecido_por_juan_lopez">Ofrecido por: Juan Lopez</string>
    <string name="fecha_27_de_junio_de_2021">Fecha: 27 de Junio de 2021</string>
    <string name="tvDays">En 5 días</string>
    <string name="tvTime">Hora: 1 PM</string>
    <string name="valor_5h">Valor: 5h</string>
    <string name="escanear_c_digo_qr">Escanear Código QR</string>
    <string name="ayuda_en_cocina">Ayuda en cocina</string>
    <string name="ofrecido_por_roberto_m">Ofrecido por: Roberto M.</string>
    <string name="fecha_14_de_junio_de_2021">Fecha: 14 de Junio de 2021</string>
    <string name="en_3_d_as">En 3 días</string>
    <string name="hora_9_am">Hora: 9 AM</string>
    <string name="valor_1h">Valor: 1h</string>
    <string name="todos_los_filtros">Todos los filtros</string>
    <string name="estado">Estado:</string>
    <string name="activo">Activo</string>
    <string name="pasado">Pasado</string>
    <string name="categoria">Categoria:</string>
    <string name="apoyo">Apoyo</string>
    <string name="cocina">Cocina</string>
    <string name="deportes">Deportes</string>
    <string name="valor">Valor:</string>
    <string name="_2h">2h</string>
    <string name="_5h">5h</string>
    <string name="_6h">6h+</string>
    <string name="mes">Mes:</string>
    <string name="febrero">Febrero</string>
    <string name="a_o">Año:</string>
    <string name="todos">Todos</string>
    <string name="tvCheckout">Checkout</string>
    <string name="tvActivity">Arreglo tu jardinería</string>
    <string name="tvHowDoIt">Ofrecido por: Juan Perez</string>
    <string name="tvDescriptionActivity">Descripción: Corte de arbustos</string>
    <string name="tvNumHours">3</string>
    <string name="tvDates">Fechas disponibles</string>
    <string name="tvSchedule">Horario</string>
    <string name="tvSchedule1">Jueves   3  de Agosto   13:00 pm a 14:00 pm</string>
    <string name="tvSchedule2">Domingo  6  de Agosto   12:00 pm a 13:00 pm</string>
    <string name="tvSchedule3">Martes   15 de Agosto   10:00 pm a 11:00 pm</string>
    //MyProfile
    <string name="tvMyProfile">Mi perfil</string>
    <string name="tvName">Nombre:</string>
    <string name="tvNamePerson">María Fernanda Mondragón</string>
    <string name="tvEmail">Correo:</string>
    <string name="tvEmailPerson">MaFer@gmail.com</string>
    <string name="tvPermissions">Permisos:</string>
    <string name="tvGps">Ubicación</string>
    //QR
    <string name="tvShowQr">Muestra este QR a la persona que te contrató para canjear la hora</string>
    <string name="muestra_este_qr_a_la_persona_que_te_contrat_para_canjear_la_hora">Muestra este QR a la persona que te contrató para canjear la hora</string>
    //LogOut
    <string name="mar_a_fernanda">María Fernanda</string>
</resources>