<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="false"
    tools:context=".Checkout">

    <TextView
        android:id="@+id/tvSchedule2"
        android:layout_width="182dp"
        android:layout_height="42dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tvSchedule2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSchedule1" />

    <TextView
        android:id="@+id/tvSchedule3"
        android:layout_width="182dp"
        android:layout_height="34dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tvSchedule3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSchedule2" />

    <TextView
        android:id="@+id/tvCheckout"
        android:layout_width="210dp"
        android:layout_height="65dp"
        android:layout_marginTop="40dp"
        android:text="@string/tvCheckout"
        android:textColor="#050505"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="427dp"
        android:layout_height="276dp"
        app:cardBackgroundColor="#F9F9F9"
        app:cardCornerRadius="5dp"
        app:cardElevation="25dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29"
        tools:layout_editor_absoluteX="-8dp">

        <ImageView
            android:id="@+id/imgPhotoProfile"
            android:layout_width="126dp"
            android:layout_height="123dp"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center_horizontal"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/minus_50px" />

            <TextView
                android:id="@+id/tvNumHours"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tvNumHours"
                android:textAlignment="center"
                android:textSize="48sp" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/plus_50px" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvJop"
                android:layout_width="156dp"
                android:layout_height="23dp"
                android:text="@string/tvActivity" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="156dp"
                android:layout_height="31dp"
                android:text="@string/tvHowDoIt" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="154dp"
                android:layout_height="76dp"
                android:text="@string/tvDescriptionActivity" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="195dp"
        android:layout_height="210dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDates"
        app:layout_constraintVertical_bias="0.806" />

    <TextView
        android:id="@+id/tvSchedule"
        android:layout_width="69dp"
        android:layout_height="25dp"
        android:layout_marginTop="444dp"
        android:layout_marginEnd="64dp"
        android:text="@string/tvSchedule"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSchedule1"
        android:layout_width="184dp"
        android:layout_height="44dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tvSchedule1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSchedule" />

    <Button
        android:id="@+id/btnConfirmOrder"
        android:layout_width="327dp"
        android:layout_height="42dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#070707"
        android:onClick="noConfirmarPedido"
        android:text="Confirmar Pedido"
        app:cornerRadius="25dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.607"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnConfirmOrder2"
        android:layout_width="327dp"
        android:layout_height="42dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="#070707"
        android:onClick="confirmarPedido"
        android:text="Confirmar Pedido"
        app:cornerRadius="25dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.607"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvDates"
        android:layout_width="195dp"
        android:layout_height="26dp"
        android:text="@string/tvDates"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="14dp"
        tools:layout_editor_absoluteY="413dp" />

</androidx.constraintlayout.widget.ConstraintLayout>